Fixed homepage height on Safari iOS.

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,6 +1,6 @@
 .scroller {
     width: 100vw;
-    height: 100vh;
+    height: var(--vh);
 }
 
 .page-container {
